Bug 687188 - Skia radial gradients should use the 0/1 color stop values for clamping. r=jrmuziel